kubernetes/apps/observability/rackpanel/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rackpanel
  annotations:
    gatus.home-operations.com/endpoint: |
      group: observability
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: mdi-monitor-dashboard
    gethomepage.dev/name: Rackview
    gethomepage.dev/group: Observability
spec:
  hostnames:
    - "rackview.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: rackpanel
          port: 8080
